--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "memory-book",
   "version": "0.0.0",
   "scripts": {
-    "build": "./node_modules/.bin/ts-node build.ts",
-    "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "start:dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec"
+    "start": "tsc --project ./tsconfig.json && nodemon ./src/boot.ts"
   },
   "nodemonConfig": {
     "watch": [
@@ -62,6 +57,7 @@
   "dependencies": {
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -77,6 +73,7 @@
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.12",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.11",
