--- a/package.json
+++ b/package.json
@@ -2,23 +2,16 @@
   "name": "memory-book",
   "version": "0.0.0",
   "scripts": {
-    "start": "tsc --project ./tsconfig.json && nodemon ./src/boot.ts"
+    "start": "tsc --project ./tsconfig.json && nodemon src/boot.ts"
   },
   "nodemonConfig": {
     "watch": [
       "src"
     ],
-    "ext": "ts, html",
+    "ext": "ts, js",
     "ignore": [
       "src/public"
-    ],
-    "exec": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./src"
-  },
-  "_moduleAliases": {
-    "@daos": "dist/daos",
-    "@entities": "dist/entities",
-    "@shared": "dist/shared",
-    "@server": "dist/Server"
+    ]
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -68,7 +61,8 @@
     "jsonfile": "^6.1.0",
     "knex": "^0.95.8",
     "module-alias": "^2.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
